# svelte-on-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  index.html  package-lock.json  package.json  rollup.config.js
client/: App.svelte  Footer.svelte  Nav.svelte  State.svelte  main.js
client/pages/: About.svelte  Catcher.svelte  Common.svelte  Home.svelte  Login.svelte  Logout.svelte  Secure.svelte
public/: index.html
src/: App.svelte  app.css  main.rs
src/lib/: About.svelte  Common.svelte  Footer.svelte  Home.svelte  Login.svelte  Nav.svelte  Secret.svelte  store.js
