[package]
name = "svelte-on-rust"
version = "0.1.4"
authors = ["Sachin Bhutani <sachin1705@gmail.com>", "Van Vuong Ngo <https://github.com/vanvuongngo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
rocket_contrib = "0.4.10"